--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <!-- styles -->
+  <link rel="stylesheet" href="./src/styles/reset.css">
+  <link rel="stylesheet" href="./src/styles/global.css">
+
+  <!-- scripts -->
+  <script src="./src/index.js" type="module" defer></script>
+
   <title>Wordle</title>
 </head>
 <body>
-  <div id="app"></div>
+<div id="app"></div>
 </body>
 </html>
